fix: font color change for contrast fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ main {
 }
 
 .orange-text {
-    color: #ecb679;
+    color: #f5e0c8;
 }
 
 /* Hero image styling */
